Use the same color for the capturing icon for touch and non-touch.

Bug: 915609
Change-Id: Iabc4219958f5d0411e8911b9a2f4e9de1573b68d
Reviewed-on: https://chromium-review.googlesource.com/c/1393262
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619642}
Former-commit-id: e51839d8198a7f40ccf0a25cfa48900c4204f6ec